@@ -47,3 +47,5 @@ Temporary Items
 .apdisk
 
 \.idea/
+
+.vscode/
