@@ -34,7 +34,7 @@ def get(function_, time_out, *args, **table):
         response = None
 
         f = repr(function_)
-        f = re.sub('.+\smethod\s|.+function\s|\sat\s.+|\sof\s.+', '', f)
+        f = re.sub(r'.+\smethod\s|.+function\s|\sat\s.+|\sof\s.+', '', f)
 
         a = hashlib.md5()
         for i in args:
